--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,98 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="Stylesheet" href="Styles.css" />
+
     <title>ShienBeauty | E-commerce Design</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <img class="logo" alt="ShienBeauty logo" src="Img/Faces/logo1.png" />
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a class="main-nav-link" href="#">Accueil</a></li>
+          <li><a class="main-nav-link" href="#">Produits</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Contacte</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section-hero">
+        <div class="hero">
+          <div class="hero-text-box">
+            <h1 class="heading-primary">
+              Révélez votre beauté naturelle avec nos soins cosmétiques de
+              qualité supérieure
+            </h1>
+            <p class="hero-description">
+              Le service d'abonnement cosmétique ultime tout au long de l'année,
+              offrant des soins de la peau et du maquillage personnalisés,
+              adaptés à vos besoins, nous apportons la science et le luxe
+              directement à votre porte, vous aidant à obtenir une beauté
+              éclatante et sans effort chaque jour.
+            </p>
+            <a href="#" class="btn margin-right-sm">En savoir plus &darr;</a>
+            <div class="delivered-clients">
+              <div class="delivered-imgs">
+                <img src="Img/Faces/face1.jpg" alt="custm-photo" />
+                <img src="Img/Faces/face2.jpg" alt="custm-photo" />
+                <img src="Img/Faces/Face3.jpg" alt="custm-photo" />
+                <img src="Img/Faces/Face4.jpg" alt="custm-photo" />
+                <img src="Img/Faces/face5.jpg" alt="custm-photo" />
+                <img src="Img/Faces/face6.jpg" alt="custm-photo" />
+              </div>
+
+              <p class="delivered-text">
+                <strong>250,000+</strong> products delivered last year!
+              </p>
+            </div>
+          </div>
+          <div class="hero-img-box">
+            <img
+              src="Img/heroImage.png"
+              class="hero-img"
+              alt="Women enjoying skincare routines"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="section-produits">
+        <div class="container">
+          <span class="subheading">Produits</span>
+          <h2 class="heading secondary">
+            Shien beauty sélectionne parmi plus de 5,000+ nuances et produits
+            pour créer votre look parfait
+          </h2>
+        </div>
+        <div class="container grid grid--3-cols">
+          <div class="produits">
+            <img
+              src="Img/Produits/product.jpg"
+              class="produit-img"
+              alt="Glose maroc"
+            />
+            <span class="tag">les rouge a levre</span>
+            <p class="produit-title">Beauty Rose</p>
+            <ul class="produit-attributes">
+              <li class="produit-attribute">3 ml</li>
+              <li class="produit-attribute">Fini:Briallant</li>
+              <li class="produit-attribute">+80% Hydratation</li>
+              <li class="produit-attribute">Durée: 8 heures</li>
+              <li class="produit-attribute">Formule :Vegan</li>
+              <li class="produit-attribute">95/100 Score d'innocuité &reg;</li>
+              <li class="produit-attribute">Durée: 8 heures</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <script src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  </body>
 </html>
