changer le produit

--- a/Index.html
+++ b/Index.html
@@ -96,7 +96,7 @@
                 </li>
                 <li class="Prix-centre">Prix :<strong>99 Dhs</strong></li>
               </ul>
-              <button class="btn-cmd">Commander</button>
+              <button class="btn-cmd" onclick="commanderProduit()">Commander</button>
             </div>
           </div>
           <div class="produits">
@@ -203,27 +203,24 @@
 </div>
 <div class="produits">
   <img
-    src="Img/Procucts/ProdPack.jpg"
+    src="Img/Procucts/fond.jpg"
     class="produit-img"
     alt="Glose maroc"
   />
   <div class="Produit-content">
     <div class="produit-tags">
-      <span class="tag">le rouge à levre</span>
+      <span class="tag">forever</span>
+       
+      
     </div>
-    <!-- <p class="produit-title">Lancome</p> -->
     <ul class="produit-attributes">
-      <li class="produit-attribute"><strong>3</strong>ml</li>
-      <li class="produit-attribute">Brillant Fini</li>
+      <li class="produit-attribute">Tenue impeccable </li>
+      <li class="produit-attribute">Hydratation & Confort</li>
       <li class="produit-attribute">
-        <strong>+80%</strong>Hydratation
+        Résultat naturel 
       </li>
-      <li class="produit-attribute">
-        Durée :<strong>8heures</strong>
-      </li>
-      <li class="produit-attribute">Vegan Formule</li>
-      <li class="produit-attribute">
-        <strong>95/100</strong>Score d'innocuité &reg;
+      <li class="Prix-centre">
+        Prix:<strong>199 Dhs</strong>
       </li>
     </ul>
     <button class="btn-cmd button-container" onclick="commanderProduit()">Commander</button>
